--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U -r requirements.txt -r requirements_gui.txt
+          mkdir downloads
 
       - name: Make executable windows
         if: matrix.os == 'windows'
